--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,24 @@ body{
 .br1:active{
     color: red;
 }
+
+.goods{
+    margin-top: 20px;
+}
+
+.article{
+    width: 270px;
+    height: 300px;
+    float: left;
+    text-align: center;
+    margin-left: 40px;
+    margin-top: 10px;
+}
+
+.article img{
+    width: 100%;
+}
+
+.article span{
+    font-weight: bolder;
+}
